2008-06-05  Laurent Debacker <debackerl@gmail.com> 

	* Ribbon.cs: 
	
	  * More work a the layout of the QuickAccessToolbar
	
	* QuickAccessToolbar.cs: 
	
	  * Add minimal code to be able to use it as a child widget in the demo.
	
	* Theme.cs: 
	
	  * Drawing of the QuickAccessToolbar's background.

2008-06-01  Laurent Debacker <debackerl@gmail.com> 

	* Ribbon.cs: 
	
	  * Add new Toolbar property to control the QuickAccessToolbar that
	  belongs to a Ribbon.
	
	  * Update Size Request
	
	  * Update Allocations
	
	  * Bugfix in the allocation
	
	* QuickAccessToolbar.cs: 
	
	  * Initial commit of the new Quick Access Toolbar widget with bare metal
	  API.
	
	* ToolBox.cs: 
	
	  * Fixed a typo in a comment.

2008-06-01  Laurent Debacker <debackerl@gmail.com> 

	* Ribbon.cs: 
	
	  * Add new Toolbar property to control the QuickAccessToolbar that
	  belongs to a Ribbon.
	
	  * Update Size Request
	
	  * Update Allocations
	
	  * Bugfix in the allocation
	
	* QuickAccessToolbar.cs: 
	
	  * Initial commit of the new Quick Access Toolbar widget with bare metal
	  API.
	
	* ToolBox.cs: 
	
	  * Fixed a typo in a comment.

2008-01-29  Laurent Debacker <debackerl@gmail.com> 

	* Gallery.cs, GalleryPopupWindow.cs: * You can now click anywhere to close
	  the popup. (Paweł 'X4lldux' Drygas).
	
	  * Proper tile selection. (Paweł 'X4lldux' Drygas).

2008-01-24  Laurent Debacker <debackerl@gmail.com> 

	* RibbonGroup.cs, Button.cs: Added signal names to enable accelerators.

2007-12-30  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs, Position.cs, RibbonGroup.cs, Ribbons.mdp: Left, Right, and Top
	  position for the label of RibbonGroup implemented.

2007-12-28  Laurent Debacker <debackerl@gmail.com> 

	* Ribbon.cs, ToggleButton.cs, RibbonGroup.cs, Tile.cs, Gallery.cs, Theme.cs,
	  gtk-gui/generated.cs, gtk-gui/objects.xml, gtk-gui/gui.stetic,
	  Ribbons.mdp, Button.cs, ChangeLog: Fixing calls to Dispose() and
	  Destroy()
